--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,22 @@
   gap: 32px;
   width: 100vw;
   height: 100vh;
-  background: darkslategray;
+  background: #21232c;
   color: white;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.App-round {
+header {
+  text-align: center;
+  line-height: 1.5;
+}
+
+.App-score {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.Round {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
@@ -19,9 +30,11 @@
   max-width: 600px;
 }
 
-.App-map {
+.Round-map {
   height: 400px;
   width: 100%;
+  border-radius: 8px;
+  overflow: hidden;
 }
 
 .leaflet-container {
