--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,21 @@
 .App {
   display: flex;
-  flex-flow: column nowrap;
+  flex-flow: row nowrap;
   align-items: center;
   justify-content: center;
-  gap: 32px;
-  width: 100vw;
+  /* gap: 32px; */
+  width: 100%;
   height: 100vh;
+  padding: 0 32px;
   background: #21232c;
   color: white;
   font-family: 'Work Sans', 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-header {
+.App-status {
   text-align: center;
   line-height: 1.5;
+  border: 1px solid red;
 }
 
 .App-score {
@@ -23,11 +25,15 @@ header {
 
 .Round {
   display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-  gap: 32px;
+  justify-content: center;
   width: 100%;
-  max-width: 600px;
+  height: 100%;
+}
+
+.Round-photo {
+  max-width: 100%;
+  max-height: 100%;
+  margin: 32px;
 }
 
 .Round-map {
