--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,66 @@
 .App {
   display: flex;
-  flex-flow: row nowrap;
   align-items: center;
   justify-content: center;
-  /* gap: 32px; */
+  gap: 32px;
   width: 100%;
   height: 100vh;
-  padding: 0 32px;
+  padding: 64px 96px;
   background: #21232c;
   color: white;
   font-family: 'Work Sans', 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.Photo {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  min-width: 300px;
+  background: #15161c;
+  border-radius: 16px;
+  overflow: hidden;
+}
+
+.Photo img {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+}
+
+.App-side {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 100%;
+  min-width: 300px;
+  max-width: 500px;
+}
+
 .App-status {
   text-align: center;
   line-height: 1.5;
-  border: 1px solid red;
 }
 
 .App-score {
   font-size: 24px;
-  font-weight: bold;
+  font-weight: 800;
+  text-transform: uppercase;
 }
 
-.Round {
+.MapPicker {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  gap: 16px;
   width: 100%;
-  height: 100%;
 }
 
-.Round-photo {
-  max-width: 100%;
-  max-height: 100%;
-  margin: 32px;
-}
-
-.Round-map {
-  height: 400px;
+.MapPicker-map {
+  height: 300px;
   width: 100%;
   border-radius: 8px;
   overflow: hidden;
