--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: #21232c;
   color: white;
-  font-family: 'Work Sans', 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'DM Sans', 'Inter', -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
 }
 
 code {
@@ -17,6 +19,34 @@ code {
 
 * {
   box-sizing: border-box;
+}
+
+button {
+  background: #ffc4e0;
+  height: 48px;
+  border-radius: 8px;
+  border: none;
+  padding: 0;
+  color: #2a212c;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 0.03em;
+  font-family: 'DM Sans', 'Inter', -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
+  transition-property: background;
+  transition-timing-function: ease-in-out;
+  transition-duration: 150ms;
+}
+button:hover:not(:disabled) {
+  background: #ffdaeb;
+}
+button:active:not(:disabled) {
+  background: #d697b5;
+}
+button:disabled {
+  opacity: 0.3;
 }
 
 .App {
@@ -66,7 +96,8 @@ code {
 
 .App-score {
   font-size: 24px;
-  font-weight: 800;
+  font-weight: 700;
+  letter-spacing: 0.05em;
   text-transform: uppercase;
 }
 
