preload the next photo

--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,10 @@ button:disabled {
   object-fit: contain;
 }
 
+.preload {
+  display: none !important;
+}
+
 .Game-side {
   flex-grow: 1;
   display: flex;
